--- a/templates/login.html
+++ b/templates/login.html
@@ -1,26 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="mx-auto" style="max-width:520px;">
-  <div class="card p-4 p-md-5">
-    <h2 class="auth-title mb-4">Nice to see you again!</h2>
+
+<div class="row justify-content-center">
+  <div class="col-md-5">
+    <h3 class="mb-4">Nice to see you again!</h3>
 
     <form method="post">
-      <label class="form-label">Email</label>
-      <input name="username" type="email" class="form-control form-control-lg mb-1"
-             placeholder="Enter your work email" required>
-      <div class="form-hint mb-3">Information text</div>
-
-      <label class="form-label">Password</label>
-      <input name="password" type="password" class="form-control form-control-lg mb-1"
-             placeholder="Enter your Password" required>
-      <div class="form-hint mb-3">Information text</div>
-
-      <div class="d-flex justify-content-end mb-3">
-        <a href="{{ url_for('forgot') }}" class="text-decoration-none">Forgot password?</a>
+      <div class="mb-3">
+        <label class="form-label">Email</label>
+        <input name="username" type="email" class="form-control" placeholder="Enter your work email" required>
       </div>
 
-      <button class="btn btn-primary btn-lg w-100" type="submit">Sign in</button>
+      <div class="mb-3">
+        <label class="form-label">Password</label>
+        <input name="password" type="password" class="form-control" placeholder="Enter your Password" required>
+      </div>
+
+      <div class="d-flex justify-content-end mb-3">
+        <a href="{{ url_for('forgot') }}">Forgot password?</a>
+      </div>
+
+      <button class="btn btn-primary w-100" type="submit">Sign in</button>
     </form>
   </div>
 </div>
+
 {% endblock %}
