--- a/templates/submit_thanks.html
+++ b/templates/submit_thanks.html
@@ -21,9 +21,11 @@
     </div>
   </div>
 
-  <div class="d-grid" style="max-width:220px; margin:0 auto;">
-    <a class="btn btn-outline-secondary" href="/">Go Back</a>
-  </div>
+<div class="text-center py-5">
+  <h3>Thanks, {{ name }}!</h3>
+  <p class="text-muted mb-4">Your application has been submitted.</p>
+  <a class="btn btn-outline-secondary" href="{{ url_for('apply', code=code) }}">Go back</a>
+</div>
 </div>
 
 {% endblock %}
