--- a/templates/global_candidates.html
+++ b/templates/global_candidates.html
@@ -23,16 +23,18 @@
     <button class="btn btn-primary w-100">Filter</button>
   </div>
 
-  <div class="col-md-2 d-flex gap-2 justify-content-end">
-    <a class="export-link w-100"
-       href="{{ url_for('candidates_export_csv', **request.args.to_dict()) }}">
-      Export Current View
-    </a>
-    <a class="export-link w-100"
-       href="{{ url_for('candidates_export_csv', all=1) }}">
-      Export All
-    </a>
-  </div>
+{% set export_base = url_for('candidates_export_csv') %}
+<!-- add a tiny left margin so it doesn't touch the Filter button -->
+<div class="export-group d-inline-flex align-items-center gap-2 ms-2">
+  <a class="btn btn-outline-secondary text-nowrap"
+     href="{{ export_base }}{% if q or jd %}?{% endif %}{% if q %}q={{ q|urlencode }}{% endif %}{% if q and jd %}&{% endif %}{% if jd %}jd={{ jd|urlencode }}{% endif %}">
+    Export Current View
+  </a>
+  <a class="btn btn-outline-secondary text-nowrap" href="{{ export_base }}?all=1">
+    Export All
+  </a>
+</div>
+
 </form>
 
 <div class="mb-2 small text-muted">
