--- a/templates/self_id.html
+++ b/templates/self_id.html
@@ -38,8 +38,13 @@
             <option>Decline to self-identify</option>
           </select>
           <div class="small mt-1">
-            <a class="link-primary" data-bs-toggle="collapse" href="#raceEthCollapse" role="button" aria-expanded="false" aria-controls="raceEthCollapse">
-              Race &amp; Ethnicity Definitions
+            <a
+              href="https://job-boards.cdn.greenhouse.io/docs/2023/RaceEthnicityDefinitions.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="link-primary"
+            >
+              Race &amp; Ethnicity Definitions (PDF)
             </a>
           </div>
         </div>
