--- a/templates/self_id.html
+++ b/templates/self_id.html
@@ -12,7 +12,7 @@
         process or thereafter. Any information that you do provide will be recorded and maintained in a confidential file.
       </p>
       <p class="text-muted small mb-4">
-        As set forth in BlackBox’s Equal Employment Opportunity policy, we do not discriminate on the basis of any
+        As set forth in our Equal Employment Opportunity policy, we do not discriminate on the basis of any
         protected group status under any applicable law.
       </p>
 
